<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoParty</string>
    <string name="go_part_acc_type">com.studiumrogusowe.goparty</string>
    <string name="facebook_app_id">504846879664518</string>
    <string name="facebook_login_failure">An error occured, try again later!</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">GoParty</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Wydarzenia">Events</string>
    <string name="profil_uzytkownika">User Profile</string>
    <string name="imie">First name:</string>
    <string name="nazwisko">Last name:</string>
    <string name="nick">Nick</string>
    <string name="edytuj_profil">Edit profile</string>
    <string name="fav_bands">Favourite bands:</string>
    <string name="fav_genres">Favourite genres:</string>
    <string name="title_activity_club_details">ClubDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="najblizszekluby">Nearest Clubs</string>

</resources>
