<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/goparty_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/logo_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="secretPass"
            android:padding="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_frame">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_form_bg"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:paddingLeft="8dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_form_bg"
                    android:hint="@string/prompt_password"
                    android:imeActionId="5"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:paddingLeft="8dp"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_btn_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_button"
                    android:text="@string/action_log_in" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_btn_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_button"
                    android:text="@string/action_sign_up" />

                <Button
                    android:id="@+id/random_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_btn_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_button"
                    android:text="Random" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_btn_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/fb_login_button"
                    android:textAllCaps="true"
                    android:textStyle="normal" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>



